Fixed spacing issues in form section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ body{
     cursor: pointer;
 }
 
+.row{
+    margin-bottom:12px;
+}
 .jumbotron{
     background-color:transparent;
     text-align: center;
